src/app/components/countries-list/countries-list.component.scss
$top-padding: 52px;
$border: 1px solid rgba(165, 165, 165, 1);

.countries {
  display: grid;
  grid-template-columns: auto 393px;

  &__list {
    padding: $top-padding 64px;
  }

  &__title {
    margin-bottom: 65px;
  }

  &__items {
    display: grid;
    row-gap: 43px;
    margin-bottom: 61px;
  }

  &__item {
    border-bottom: $border;
  }

  &__go-to-details {
    margin-left: 23px;
  }

  &__country-properties {
    padding-top: 24px;
    padding-bottom: 26px;
  }

  &__pagination-controls {
    margin-left: 8px;
  }

  &__filters {
    padding: $top-padding 32px;
    border-left: $border;
    background: #fff;
  }

  &__text-input {
    margin-bottom: 41px;
  }

  &__filters-title {
    margin-bottom: 34px;
  }

  &__radio-title {
    margin: 25px 0;
  }

  &__radio-items {
    display: grid;
    row-gap: 16px;
    margin-left: 2px;
  }
}

